Implement employee onboarding navigation in HomeFragment. Update AndroidManifest to enable back navigation callbacks. Add new navigation actions for onboarding in nav_graph and enhance onboarding card functionality to directly navigate to the employee onboarding screen with user-specific data. Introduce date formatting for onboarding start date and log navigation details for better tracking.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_homeFragment_to_myApplicationsFragment"
             app:destination="@id/myApplicationsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_employeeOnboardingFragment"
+            app:destination="@id/employeeOnboardingFragment" />
     </fragment>
 
     <!-- My Applications -->
@@ -164,6 +167,9 @@
         <action
             android:id="@+id/action_onboardingListFragment_to_createOnboardingFragment"
             app:destination="@id/createOnboardingFragment" />
+        <action
+            android:id="@+id/action_onboardingListFragment_to_employeeOnboardingFragment"
+            app:destination="@id/employeeOnboardingFragment" />
     </fragment>
     
     <fragment
@@ -174,6 +180,36 @@
         <action
             android:id="@+id/action_onboardingDetailFragment_to_addTaskFragment"
             app:destination="@id/addTaskFragment" />
+        <action
+            android:id="@+id/action_onboardingDetailFragment_to_employeeOnboardingFragment"
+            app:destination="@id/employeeOnboardingFragment" />
+    </fragment>
+    
+    <fragment
+        android:id="@+id/employeeOnboardingFragment"
+        android:name="com.capstone.unitechhr.fragments.EmployeeOnboardingFragment"
+        android:label="Employee Onboarding"
+        tools:layout="@layout/fragment_employee_onboarding">
+        <argument
+            android:name="employeeId"
+            app:argType="string"
+            android:defaultValue="" />
+        <argument
+            android:name="employeeName"
+            app:argType="string"
+            android:defaultValue="" />
+        <argument
+            android:name="employeePosition"
+            app:argType="string"
+            android:defaultValue="" />
+        <argument
+            android:name="collectionPath"
+            app:argType="string"
+            android:defaultValue="" />
+        <argument
+            android:name="startDate"
+            app:argType="string"
+            android:defaultValue="" />
     </fragment>
     
     <fragment
